--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="aaj_web.html">
+        <a href="index.html">
         <img src="aaj.logo.png" alt="Freight Forwarding" class="header-logo">
         <nav>
             <ul>
