--- a/book_trucking.html
+++ b/book_trucking.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="aaj_web.html">
+        <a href="index.html">
         <img src="aaj.logo.png" alt="Freight Forwarding" class="header-logo">
         <nav>
             <ul>
