--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="aaj.logo.png" alt="Freight Forwarding" class="header-logo">
         <nav>
             <ul>
-                <li><a href="aaj_web.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="book_trucking.html">Book Trucking Service</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="org_chart.html">Organizational Chart</a></li>
